--- a/style.css
+++ b/style.css
@@ -21,3 +21,20 @@ hr {
 #homePicture {
     margin-right: 10px;
 }
+.portfolio {
+    object-fit: cover;
+}
+.col-md-6 p {
+    background-image: url(https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-026.jpg);
+    color: navy;
+    position: absolute;
+    bottom: 25px;
+    right: 20px;
+    left: 20px;
+    text-align: center;
+}
+.col-md-6 img {
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
