--- a/style.css
+++ b/style.css
@@ -39,3 +39,16 @@ hr {
     width: 100%;
     height: 400px;
 }
+body {
+    overflow: hidden;
+}
+nav a {
+    color: white;
+}
+#home,
+#contact {
+    border-right: 1px solid white;
+}
+.navbar-brand {
+    padding: 15px;
+}
